--- a/src/Components/Listing/listing.scss
+++ b/src/Components/Listing/listing.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   gap: 12px;
 
+  position: relative;
   width: 350px;
   height: 275px;
 
@@ -63,6 +64,31 @@
     }
   }
 
+  .watch-later {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-4px, 8px);
+    display: none;
+
+    .icon {
+      height: 28px;
+      width: 28px;
+
+      &:hover {
+        stroke: $light-2;
+        fill: $dark-2;
+      }
+    }
+
+    &.active {
+      .icon {
+        stroke: $primary-1;
+        fill: $primary-1;
+      }
+    }
+  }
+
   &:hover {
     .img-container {
       opacity: 1;
@@ -72,6 +98,9 @@
     }
     .video-data {
       color: $light-4;
+    }
+    .watch-later {
+      display: block;
     }
   }
 }
