--- a/src/_reuse.scss
+++ b/src/_reuse.scss
@@ -98,6 +98,11 @@ $border-gray-1: 1px solid rgba(220, 220, 221, 0.3);
   }
 }
 
+.btn-reset {
+  background: none;
+  outline: none;
+}
+
 .modal {
   @extend .card;
   position: fixed;
