--- a/src/Components/Listing/listing.scss
+++ b/src/Components/Listing/listing.scss
@@ -1,5 +1,28 @@
 @import '../../reuse';
 
+.input-container {
+  width: 100%;
+  background-color: $dark-1;
+  @extend .d-flex;
+  padding: 12px 0 24px 0;
+  position: sticky;
+  top: -32px;
+  z-index: 2;
+
+  .search-input {
+    min-width: 400px;
+    max-width: 50%;
+    padding: 8px 6px;
+    width: 100%;
+    outline: none;
+    border: $border-gray-1;
+    background-color: $light-1;
+    color: $light-4;
+    border-radius: 4px;
+    letter-spacing: 0.2mm;
+  }
+}
+
 .videos-drawer {
   @extend .d-flex;
   flex-wrap: wrap;
