--- a/src/Components/Listing/listing.scss
+++ b/src/Components/Listing/listing.scss
@@ -10,16 +10,9 @@
   z-index: 2;
 
   .search-input {
+    @extend .input-element-theme;
     min-width: 400px;
     max-width: 50%;
-    padding: 8px 6px;
-    width: 100%;
-    outline: none;
-    border: $border-gray-1;
-    background-color: $light-1;
-    color: $light-4;
-    border-radius: 4px;
-    letter-spacing: 0.2mm;
   }
 }
 
