--- a/src/Components/Video/player.scss
+++ b/src/Components/Video/player.scss
@@ -45,6 +45,7 @@
   @extend .d-flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: stretch;
   gap: 16px;
   margin: 16px 0;
 
